--- a/app/globals.css
+++ b/app/globals.css
@@ -182,6 +182,54 @@ body {
   @apply text-[10px] font-medium leading-[140%];
 }
 
+@utility wrapper {
+  @apply max-w-5xl mx-auto px-5 md:px-10 text-[#7986AC] w-full p-16
+}
+
+@utility root-container {
+  @apply mt-16 flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10
+}
+
+@utility root {
+  @apply flex min-h-screen w-full flex-col bg-white lg:flex-row;
+}
+
+@utility auth {
+  @apply flex-center min-h-screen w-full bg-purple-100
+}
+
+@utility sidebar {
+  @apply h-screen w-72 bg-card text-foreground p-5 shadow-md shadow-purple-200/50 lg:flex;
+}
+
+@utility sidebar-logo {
+  @apply flex items-center gap-2 md:py-2;
+}
+
+@utility sidebar-nav {
+  @apply flex flex-col h-full justify-between gap-6;
+}
+
+@utility sidebar-nav_elements {
+  @apply hidden w-full flex-col items-start gap-2 md:flex;
+}
+
+@utility sidebar-nav_element {
+  @apply flex items-center gap-3 p-4 w-full rounded-xl bg-cover transition-colors duration-200 hover:bg-purple-100 hover:shadow-inner;
+}
+
+@utility header {
+  @apply flex-between fixed h-16 w-full border-b-4 border-purple-100 bg-white p-5 lg:hidden;
+}
+
+@utility header-nav_elements {
+  @apply mt-8 flex w-full flex-col items-start gap-5;
+}
+
+@utility sidebar-link {
+  @apply font-semibold flex size-full gap-4 p-4;
+}
+
 /* =======================
    5. Keyframes
    ======================= */
