--- a/app/globals.css
+++ b/app/globals.css
@@ -183,11 +183,11 @@ body {
 }
 
 @utility wrapper {
-  @apply max-w-5xl mx-auto px-5 md:px-10 text-[#7986AC] w-full p-16
+  @apply max-w-5xl mx-auto px-5 md:px-10 text-[#7986AC] w-full
 }
 
 @utility root-container {
-  @apply mt-16 flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10
+  @apply flex-1 overflow-auto py-8 lg:mt-0 lg:max-h-screen lg:py-10
 }
 
 @utility root {
@@ -228,6 +228,88 @@ body {
 
 @utility sidebar-link {
   @apply font-semibold flex size-full gap-4 p-4;
+}
+
+
+@utility h2-bold {
+  @apply text-[30px] font-bold md:text-[36px] leading-[110%];
+}
+
+@utility dark-600 {
+  @apply text-[#2B3674]
+}
+
+@utility p-16-regular {
+  @apply font-normal text-[16px] leading-[140%];
+}
+
+@utility p-16-semibold {
+  @apply font-semibold text-[16px] leading-[140%];
+
+}
+
+@utility input-field {
+  @apply rounded-[16px] font-semibold text-[16px] leading-[140%] border-2 border-purple-200/20 shadow-sm shadow-purple-200/15 disabled:opacity-100 h-[50px] md:h-[54px] focus-visible:ring-offset-0 px-4 py-3 focus-visible:ring-transparent;
+}
+
+@utility select-field {
+  @apply w-full border-2 border-purple-200/20 shadow-sm shadow-purple-200/15 rounded-[16px] h-[50px] md:h-[54px] disabled:opacity-100 px-4 py-3 focus:ring-offset-0 focus-visible:ring-transparent focus:ring-transparent focus-visible:ring-0 focus-visible:outline-none placeholder:font-semibold;
+}
+
+@utility select-item {
+  @apply py-3 cursor-pointer hover:bg-purple-100;
+}
+
+@utility prompt-field {
+  @apply flex flex-col gap-5 lg:flex-row lg:gap-10;
+}
+
+@utility submit-button {
+  @apply bg-purple-gradient bg-cover rounded-full py-4 px-6 h-[50px] w-full md:h-[54px];
+}
+
+@utility media-uploader-field {
+  @apply grid h-fit min-h-[200px] grid-cols-1 gap-5 py-4 md:grid-cols-2;
+}
+
+@utility error-toast {
+  @apply bg-red-100 text-red-900;
+}
+
+@utility success-toast {
+  @apply bg-green-100 text-green-900;
+}
+
+@utility h3-bold {
+  @apply font-bold text-[30px] leading-[140%];
+}
+
+@utility media-uploader_cldImage {
+  @apply h-fit min-h-72 w-full rounded-[10px] border border-dashed bg-purple-100/20 object-cover p-2;
+}
+
+@utility media-uploader_cta {
+  @apply flex-center flex h-72 cursor-pointer flex-col gap-5 rounded-[16px] border border-dashed bg-purple-100/20 shadow-inner;
+}
+
+@utility media-uploader_cta-image {
+  @apply rounded-[16px] bg-white p-5 shadow-sm shadow-purple-200/50;
+}
+
+@utility download-btn {
+  @apply font-medium text-[14px] leading-[120%] mt-2 flex items-center gap-2 px-2;
+}
+
+@utility transformed-placeholder {
+  @apply flex-center font-medium text-[14px] leading-[120%] h-full min-h-72 flex-col gap-5 rounded-[16px] border border-dashed bg-purple-100/20 shadow-inner;
+}
+
+@utility transformed-image {
+  @apply h-fit min-h-72 w-full rounded-[10px] border border-dashed bg-purple-100/20 object-cover p-2;
+}
+
+@utility transforming-loader {
+  @apply flex-center absolute left-[50%] top-[50%] size-full -translate-x-1/2 -translate-y-1/2 flex-col gap-2 rounded-[10px] border bg-[#384262]/90
 }
 
 /* =======================
